Fix CSS layout issues on 404 page and add font styling; remove unnecessary comments from HTML files

--- a/css/404.css
+++ b/css/404.css
@@ -12,7 +12,8 @@ body {
     backdrop-filter: blur(20px);
     display: flex;
     flex-direction: column;
-    justify-content: space-beetwen;
+    justify-content: space-between;
+    font-family: "Venice Blvd", sans-serif;
 }
 
 main {
@@ -21,6 +22,7 @@ main {
     justify-content: space-evenly;
     gap: 2rem;
     height: 100%;
+    font-family: "Venice Blvd", sans-serif;
 }
 
 .container {
@@ -36,6 +38,7 @@ main {
 
 .text--title {
     font-size: 128px;
+    font-style: bold;
 }
 
 .text--subtitle {
@@ -44,6 +47,7 @@ main {
 
 .text--p{
     font-size: 55px;
+    font-style: bold;
 }
 
 .button {
@@ -69,4 +73,8 @@ article {
 
 .easter-egg {
     font-size: 1px;
+}
+
+::selection {
+    background-color: #6e0dff;
 }
